# ros2Test

./: README.md
interfaceTest/: README  build.sh  initService.sh
interfaceTest/ams/ssros_ams/: CMakeLists.txt
interfaceTest/ams/ssros_ams/src/: set_fan_pwm_server.cpp
interfaceTest/ams/ssros_ams_py/: commands.txt  setup.cfg  setup.py
interfaceTest/ams/ssros_ams_py/ssros_ams_py/: gesture_publisher.py  gesture_subscriber.py  set_fan_pwm_client.py  set_fan_pwm_server.py  spin_action_client.py  spin_action_server.py
interfaceTest/ams/test_interfaces/: CMakeLists.txt
interfaceTest/ams/test_interfaces/action/: Spin.action
interfaceTest/ssros_ams/src/: gesture_publisher.cpp
interfaceTest/ssros_ams_py/: package.xml  setup.py
interfaceTest/ssros_ams_py/ssros_ams_py/: gesture_publisher.py  gesture_subscriber.py  set_fan_pwm_client.py  set_fan_pwm_server.py  spin_action_client.py  spin_action_server.py
interfaceTest/ssros_ts/: package.xml  runRosPrj.sh  setup.cfg  setup.py  tmp.sh
interfaceTest/test_interfaces/: CMakeLists.txt  package.xml
interfaceTest/test_interfaces/msg/: HeadTouchGesture.msg
ssros_ams/: package.xml  runRosPrj.sh
ssros_ams/src/: gesture_subscriber.cpp  set_fan_pwm_client.cpp  set_fan_pwm_server.cpp  spin_action_client.cpp  spin_action_server.cpp
ssros_ts/: tmp.py
ssros_ts/install/: local_setup.sh  setup.sh
ssros_ts/install/ssros_ts/lib/ssros_ts/: listener  talker
ssros_ts/install/ssros_ts/share/ssros_ts/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ssros_ts/ssros_ts/: publisher_member_function.py
test_interfaces/srv/: SetFanPWM.srv
turtlesimTest/: README
turtlesimTest/ros2_ws/src/turtlesim_circle/: CMakeLists.txt  package.xml
turtlesimTest/ros2_ws/src/turtlesim_circle/src/: circle_node.cpp
turtlesimTest/ros2_ws/src/turtlesim_rectangle/: CMakeLists.txt  package.xml
turtlesimTest/ros2_ws/src/turtlesim_test/: CMakeLists.txt  package.xml
turtlesimTest/ros2_ws/src/turtlesim_test/src/: rectangle_node.cpp  triangle_node.cpp
turtlesimTest/ros2_ws/src/turtlesim_triangle/: CMakeLists.txt  package.xml
