cmake_minimum_required(VERSION 3.8)
project(turtlesim_test)

set(CMAKE_CXX_STANDARD 14)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)

add_executable(circle_node src/circle_node.cpp)
ament_target_dependencies(circle_node rclcpp geometry_msgs)
add_executable(rectangle_node src/rectangle_node.cpp)
ament_target_dependencies(rectangle_node rclcpp geometry_msgs)
add_executable(triangle_node src/triangle_node.cpp)
ament_target_dependencies(triangle_node rclcpp geometry_msgs)

install(TARGETS
  circle_node
  rectangle_node
  triangle_node
  DESTINATION lib/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
